--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -26,7 +26,8 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:inputType="text"
-            android:maxLength="10"
+            android:ellipsize="end"
+            android:maxLines="1"
             android:textSize="22sp"
             android:textStyle="bold" />
     </com.google.android.material.textfield.TextInputLayout>
