--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -31,7 +31,7 @@
         <!-- Customize your theme here. -->
     </style>
 
-    <style name="Theme.MyToDoListNoAB" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.MyToDoListNoAB" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
