--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -14,7 +14,8 @@
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:hint="@string/enter_login"
+        android:hint="@string/enter_email"
+        app:errorEnabled="true"
         app:layout_constraintBottom_toTopOf="@+id/case_password_reg"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -27,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
             android:inputType="text"
-            android:maxLength="10" />
+            android:maxLength="24" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
